--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -225,7 +225,7 @@
           '{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.verify_identity_error | escape_quotes }}',
         ),
         new TopicEntry(
-          'Failure after entering phone number',
+          'No phone number match',
           '{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.phone_number_failure | escape_quotes }}',
         ),
         new TopicEntry(
