--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -106,6 +106,10 @@
           'Backup codes',
           '{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.backup_codes | escape_quotes }}',
         ),
+        new TopicEntry(
+          'reCAPTCHA sign in',
+          '{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.recaptcha_sign_in | escape_quotes }}',
+        ),        
         // new TopicEntry(
         //   'Remember device issue',
         //   "{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.remember_browser }}",
