--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -221,7 +221,7 @@
       '{{ site.data.[page.lang].settings.contact_page.support_request_form.topics.verifying_identity | escape_quotes }}',
       [
         new TopicEntry(
-          'State-issued ID error',
+          'Photo Upload Issue',
           '{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.state_issued_id_error | escape_quotes }}',
         ),
         new TopicEntry(
