--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -225,7 +225,7 @@
           '{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.state_issued_id_error | escape_quotes }}',
         ),
         new TopicEntry(
-          'Failure trying to verify my identity',
+          'Failing at the SSN & Address step',
           '{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.verify_identity_error | escape_quotes }}',
         ),
         new TopicEntry(
