Update submitted value and one translation for letter_in_mail

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -233,7 +233,7 @@
           '{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.phone_number_failure | escape_quotes }}',
         ),
         new TopicEntry(
-          "Didn't receive letter in mail",
+          "Verify by mail",
           '{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.letter_in_mail | escape_quotes }}',
         ),
         new TopicEntry(
