Enable prior values

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -248,14 +248,14 @@
           'In Person Proofing',
           '{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.cant_proof_in_person | escape_quotes }}',
         ),
-        // new TopicEntry(
-        //   'Creating an Account in IAL2',
-        //   "{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.how_to_create_with_verification | escape_quotes}}",
-        // ),
-        // new TopicEntry(
-        //   'How/Why do I verify my identity?',
-        //   '{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.how_to_verify | escape_quotes }}',
-        // ),
+        new TopicEntry(
+          'Creating an Account in IAL2',
+          "{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.how_to_create_with_verification | escape_quotes}}",
+        ),
+        new TopicEntry(
+          'How/Why do I verify my identity?',
+          '{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.how_to_verify | escape_quotes }}',
+        ),
         new TopicEntry(
           'Other',
           '{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.other | escape_quotes }}',
