--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -245,7 +245,7 @@
           '{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.facial_matching | escape_quotes }}',
         ),
         new TopicEntry(
-          'In Person Proofing',
+          'In-Person Proofing',
           '{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.cant_proof_in_person | escape_quotes }}',
         ),
         new TopicEntry(
