Add value and translations for “My account has been deactivated”

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -257,6 +257,10 @@
           '{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.how_to_verify | escape_quotes }}',
         ),
         new TopicEntry(
+          'Password reset with lost personal key',
+          '{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.account_deactivated | escape_quotes }}',
+        ),        
+        new TopicEntry(
           'Other',
           '{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.other | escape_quotes }}',
         ),
