Update submitted value

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -249,7 +249,7 @@
           '{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.cant_proof_in_person | escape_quotes }}',
         ),
         new TopicEntry(
-          'Creating an Account in IAL2',
+          'Creating an identity verified account',
           "{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.how_to_create_with_verification | escape_quotes}}",
         ),
         new TopicEntry(
