Use SVG, remove unnecessary PNGs

--- a/_sass/pages/_who_uses_login.scss
+++ b/_sass/pages/_who_uses_login.scss
@@ -78,7 +78,7 @@
       display: block;
 
       &.partners-img {
-        background: url(../img/who-uses-login/who-uses-illo-partners/who-uses-illo-partners.png)
+        background: url(../img/who-uses-login/who-uses-illo-partners/who-uses-illo-partners.svg)
           center center/contain no-repeat;
         height: 7rem;
         margin-top: 2rem;
