Update email inputs

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -520,11 +520,11 @@
       id="email"
       maxlength="80"
       name="email"
-      type="text"
+      type="email"
       placeholder="example@example.com"
-      pattern="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)+$"
       required
       class="usa-input"
+      autocomplete="email"
     />
     <!-- END: Email -->
 
