--- a/_includes/partners/contact.html
+++ b/_includes/partners/contact.html
@@ -65,11 +65,11 @@
         id="email"
         maxlength="80"
         name="email"
-        type="text"
+        type="email"
         placeholder="example@example.gov"
-        pattern="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)+$"
         required
         class="usa-input"
+        autocomplete="email"
         />
 
     <label class="usa-label" for="agency">Agency name <abbr title="required" class="usa-hint usa-hint--required">*</abbr></label>
