--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -310,7 +310,7 @@
 
   function remapvalues(frm) {
     // Get the current values for topic and subtopic
-    let topic = document.getElementById('{{ site.contact_form_topic_id }}');
+    let topic = document.getElementById(topicID);
     let sub = document.getElementById('sub-topic');
 
     let topicValue = topic.value;
