Add plural name

--- a/_includes/partners/header.html
+++ b/_includes/partners/header.html
@@ -72,7 +72,7 @@
               class="usa-nav__link {% if page.url contains '/determining-your-assurance-level' %}usa-current{% endif %}"
               href="{{ '/partners/determining-your-assurance-level/' | locale_url }}"
             >
-              Determining your assurance level
+              Assurance levels
             </a>
           </li>          
           <li class="usa-nav__primary-item">
