LG-14908: Add partner assurance level (#1390)
* Add partner assurance level page

* Update content/_partners/determining-your-assurance-level._en.md

Co-authored-by: Andrew Duthie <1779930+aduth@users.noreply.github.com>

* Change external link class

---------

Co-authored-by: Andrew Duthie <1779930+aduth@users.noreply.github.com>

--- a/_includes/partners/header.html
+++ b/_includes/partners/header.html
@@ -69,6 +69,14 @@
           </li>
           <li class="usa-nav__primary-item">
             <a
+              class="usa-nav__link {% if page.url contains '/determining-your-assurance-level' %}usa-current{% endif %}"
+              href="{{ '/partners/determining-your-assurance-level/' | locale_url }}"
+            >
+              Assurance levels
+            </a>
+          </li>          
+          <li class="usa-nav__primary-item">
+            <a
               class="usa-nav__link {% if page.url contains '/faq' %}usa-current{% endif %}"
               href="{{ '/partners/faq/' | locale_url }}"
             >
