--- a/_includes/partners/header.html
+++ b/_includes/partners/header.html
@@ -79,6 +79,14 @@
           {% endif %}
           <li class="usa-nav__primary-item">
             <a
+              class="usa-nav__link {% if page.url contains '/determining-your-assurance-level' %}usa-current{% endif %}"
+              href="{{ '/partners/determining-your-assurance-level/' | locale_url }}"
+            >
+              Assurance levels
+            </a>
+          </li>          
+          <li class="usa-nav__primary-item">
+            <a
               class="usa-nav__link {% if page.url contains '/faq' %}usa-current{% endif %}"
               href="{{ '/partners/faq/' | locale_url }}"
             >
