Updates from review

--- a/_layouts/partners/our-services.html
+++ b/_layouts/partners/our-services.html
@@ -35,7 +35,6 @@ layout: base
             </div>
             <div class="grid-row padding-top-2">
                 <div class="tablet:grid-col-6">
-                    <!-- TODO: CONFIRM ALT TEXT !-->
                     <img class="padding-top-7 padding-right-6" src="{{ site.baseurl }}/assets/img/partners/ial2.svg" alt='A person verifying their identity via their phone or post office.'>
                 </div>
                 <div class="tablet:grid-col-6 partners-body">
@@ -76,8 +75,7 @@ layout: base
             </div>
             <div class="grid-row padding-top-2">
                 <div class="tablet:grid-col-6">
-                    <!-- TODO: CONFIRM ALT TEXT !-->
-                    <img class="padding-top-6 padding-right-6" src="{{ site.baseurl }}/assets/img/partners/accessibility.svg" alt='TODO: CONFIRM ALT TEXT.'>
+                    <img class="padding-top-6 padding-right-6" src="{{ site.baseurl }}/assets/img/partners/accessibility.svg" alt='Login.gov is available in Spanish, French, and Simplified Chinese.'>
                 </div>
                 <div class="tablet:grid-col-6 partners-body">
                     {{ page.accessibility_multilingual_support | markdownify }}
