Center images for program updates

--- a/_layouts/partners/program-update.html
+++ b/_layouts/partners/program-update.html
@@ -18,7 +18,7 @@ layout: base
             <time datetime="{{ page.date | date: '%Y-%m-%d' }}">{{ page.date | date: "%B %d, %Y" }}</time>
           </div>
           <div class="partners-border"></div>
-          <div class="partners-body padding-top-3 padding-bottom-2">{{ page.content | markdownify }}</div>
+          <div class="partners-body program-update-body padding-top-3 padding-bottom-2">{{ page.content | markdownify }}</div>
           <a href="{{ '/partners/program-updates/' | locale_url }}" class="caret">Read more program updates</a>
         </div>
       </div>
