Update layout (temp changes)

--- a/_includes/components/2-col.html
+++ b/_includes/components/2-col.html
@@ -31,7 +31,7 @@ includes
           alt=""
           aria-hidden="true"
           class="how-it-works-image"
-          src="{{ site.baseurl }}/assets/img/how-it-works1@2x.png"
+          src="{{ site.baseurl }}/assets/img/how-it-works1.svg"
         />
         {{ include.bannercol1 | markdownify }}
       </div>
@@ -40,7 +40,7 @@ includes
           alt=""
           aria-hidden="true"
           class="how-it-works-image"
-          src="{{ site.baseurl }}/assets/img/how-it-works2@2x.png"
+          src="{{ site.baseurl }}/assets/img/how-it-works2.png"
         />
         {{ include.bannercol2 | markdownify }}
       </div>
