--- a/_includes/partners/header.html
+++ b/_includes/partners/header.html
@@ -77,6 +77,14 @@
           </li>          
           <li class="usa-nav__primary-item">
             <a
+              class="usa-nav__link {% if page.url contains '/state-and-local' %}usa-current{% endif %}"
+              href="{{ '/partners/state-and-local/' | locale_url }}"
+            >
+              State and local
+            </a>
+          </li>
+          <li class="usa-nav__primary-item">
+            <a
               class="usa-nav__link {% if page.url contains '/faq' %}usa-current{% endif %}"
               href="{{ '/partners/faq/' | locale_url }}"
             >
@@ -86,11 +94,6 @@
         </ul>
 
         <div class="partners-actions">
-          <a
-            class="{{include.mobile}} usa-button usa-button--outline {% if page.url contains '/state-and-local' %}partners-usa-button--active{% endif %}"
-            href="{{ site.baseurl }}/partners/state-and-local/"
-            >State and local</a
-          >
           <a
             class="{{include.mobile}} usa-button {% if page.url contains '/get-started' %}usa-button--active{% endif %}"
             href="{{ site.baseurl }}/partners/get-started/"
