--- a/_includes/components/2-col.html
+++ b/_includes/components/2-col.html
@@ -31,7 +31,7 @@ includes
           alt=""
           aria-hidden="true"
           class="how-it-works-image"
-          src="{{ site.baseurl }}/assets/img/how-it-works1.svg"
+          src="{{ site.baseurl }}/assets/img/how-it-works1.png"
         />
         {{ include.bannercol1 | markdownify }}
       </div>
