LG-15040: What is login (#1405)
* Update "what is login"

--- a/_includes/components/2-col.html
+++ b/_includes/components/2-col.html
@@ -28,19 +28,19 @@ includes
     <div class="text-container grid-row">
       <div class="text-column tablet:grid-col-6 pad-left-element usa-prose">
         <img
-          alt=""
+          alt
           aria-hidden="true"
           class="how-it-works-image"
-          src="{{ site.baseurl }}/assets/img/how-it-works1@2x.png"
+          src="{{ site.baseurl }}/assets/img/how-it-works1.svg"
         />
         {{ include.bannercol1 | markdownify }}
       </div>
       <div class="text-column tablet:grid-col-6 usa-prose">
         <img
-          alt=""
+          alt
           aria-hidden="true"
-          class="how-it-works-image"
-          src="{{ site.baseurl }}/assets/img/how-it-works2@2x.png"
+          class="how-it-works-image pad-left-element"
+          src="{{ site.baseurl }}/assets/img/how-it-works2.svg"
         />
         {{ include.bannercol2 | markdownify }}
       </div>
