Add class, change padding

--- a/_includes/partners/header.html
+++ b/_includes/partners/header.html
@@ -26,7 +26,7 @@
       <div class="display-none desktop:display-flex">
         {% include search.html id="desktop" collection="8803" %}
 
-        <a class="usa-button margin-left-2" style="line-height: 1; font-size: .81rem; flex-shrink: 0; width: auto; padding: 0 .75rem; display: inline-flex; align-items: center; margin-right: 0;" href="{{ site.baseurl }}/partners/get-started/">Get started</a>
+        <a class="usa-button get-started margin-left-2" href="{{ site.baseurl }}/partners/get-started/">Get started</a>
       </div>
 
       <button class="usa-menu-btn">Menu</button>
