LG-13755: Add "program updates" (#1409)
* Add program updates collection

* Add program update admin config

* Update Jekyll collection

* Update Netlify config for program updates

* Add program updates to partners header

* Add scaffolding placeholder html

* Add placeholder page

* Temporarily modify config for testing

* Update placeholder variables

* Update index scaffold

* Update entry scaffold

* Update index style

* Remove unnecessary param

* Update index page

* Update subtitle

* Update description

* Correct uploaded image path

* Add preview field

* Use preview field in template

* Remove early figma draft

* Update spacing

* Add preview text var

* Use preview var

* Add preview component

* Add vars from Jekyll

* Change component preview

* Automatically generated. Merged on Netlify CMS

Force merge of:
* "assets/img/450px.png"
* "content/_program_updates/test-title-1.md"

* Delete Program update “test-title-1”

* LG-14223 | Use icon bullets on "Verify your phone number" page (#1329)

* LG-14081: Add privacy translations (#1330)

* Add translations for French, Spanish

* Don't use import.meta.dirname in webpack.config.js (#1341)

* Don't use import.meta.dirname

Looks like `import.meta.dirname` was added in a point release in the Nodejs v20 series.

We are requiring "20" as a version, so some compatible versions won't work without this.

* Update variable name to appease linter

* remove exclude_from_nav and sitemap flags (#1340)

* Add State of Maryland (#1339)

* LG-14540: Update press kit (#1338)

* Add updated press kit

* Automatically generated. Merged on Netlify CMS

Force merge of:
* "content/_program_updates/test-title-1.md"

* Automatically generated. Merged on Netlify CMS

Force merge of:
* "content/_program_updates/this-is-a-new-program-update-for-testing-purposes.md"

* Automatically generated. Merged on Netlify CMS

Force merge of:
* "c

--- a/_includes/partners/header.html
+++ b/_includes/partners/header.html
@@ -71,6 +71,32 @@
               Security experience
             </a>
           </li>
+          {% if site.program_updates.size > 0 %}
+          <li class="usa-nav__primary-item">
+            <a
+              class="usa-nav__link {% if page.url contains '/program-updates' %}usa-current{% endif %}"
+              href="{{ '/partners/program-updates/' | locale_url }}"
+            >
+              Program updates
+            </a>
+          </li>
+          {% endif %}
+          <li class="usa-nav__primary-item">
+            <a
+              class="usa-nav__link {% if page.url contains '/determining-your-assurance-level' %}usa-current{% endif %}"
+              href="{{ '/partners/determining-your-assurance-level/' | locale_url }}"
+            >
+              Assurance levels
+            </a>
+          </li>          
+          <li class="usa-nav__primary-item">
+            <a
+              class="usa-nav__link {% if page.url contains '/state-and-local' %}usa-current{% endif %}"
+              href="{{ '/partners/state-and-local/' | locale_url }}"
+            >
+              State and local
+            </a>
+          </li>
           <li class="usa-nav__primary-item">
             <a
               class="usa-nav__link {% if page.url contains '/determining-your-assurance-level' %}usa-current{% endif %}"
