--- a/_includes/partners/header.html
+++ b/_includes/partners/header.html
@@ -87,6 +87,16 @@
               State and local
             </a>
           </li>
+          {% if site.program_updates.size > 0 %}
+          <li class="usa-nav__primary-item">
+            <a
+              class="usa-nav__link {% if page.url contains '/program-updates' %}usa-current{% endif %}"
+              href="{{ '/partners/program-updates/' | locale_url }}"
+            >
+              Program updates
+            </a>
+          </li>
+          {% endif %}          
           <li class="usa-nav__primary-item">
             <a
               class="usa-nav__link {% if page.url contains '/faq' %}usa-current{% endif %}"
