--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -420,7 +420,8 @@
     <input type="hidden" name="00NU0000004z90b" id="00NU0000004z90b" value="{{ site.data.language_map.languages[page.lang] | default: 'English' }}" />
     <input type="hidden" name="{{ site.contact_form_agency }}" id="{{ site.contact_form_agency }}" value="" data-for="agency" />
     <input type="hidden" name="{{ site.contact_form_integration }}" id="{{ site.contact_form_integration }}" value="" data-for="integration" />
-    <input type="hidden" name="retURL" value="{{ page.contact_form_success_path | absolute_url  }}" />
+    <!-- Note: Temp override !-->
+    <input type="hidden" name="retURL" value="https://federalist-17bd62cc-77b7-4687-9c62-39b462ce6fd5.sites.pages.cloud.gov/preview/gsa-tts/identity-site/LG-13880-confirmation-redirect-auto-scroll/contact/case-submitted/#get-in-touch" />
     <input type="hidden" name="orgid" value="{{ site.contact_form_orgid }}" />
     <input type="hidden" name="status" id="status" value="New" />
     <input type="hidden" id="external" name="external" value="1" />
