Use dynamic retURL

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -421,7 +421,7 @@
     <input type="hidden" name="00NU0000004z90b" id="00NU0000004z90b" value="{{ site.data.language_map.languages[page.lang] | default: 'English' }}" />
     <input type="hidden" name="{{ site.contact_form_agency }}" id="{{ site.contact_form_agency }}" value="" data-for="agency" />
     <input type="hidden" name="{{ site.contact_form_integration }}" id="{{ site.contact_form_integration }}" value="" data-for="integration" />
-    <input type="hidden" name="retURL" value="https://login.gov{{ '/' | locale_url }}" />
+    <input type="hidden" name="retURL" value="{{ page.permalink | append: 'case-submitted/#success' | absolute_url }}" />
     <input type="hidden" name="orgid" value="{{ site.contact_form_orgid }}" />
     <input type="hidden" name="status" id="status" value="New" />
     <input type="hidden" id="external" name="external" value="1" />
